--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
