--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "run-server": "node ./scripts/server.js",
+    "server": "node ./scripts/server.js",
     "check-types": "tsc"
   },
   "author": "",
